--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -38,6 +38,7 @@
         $('#mybox').click(function () {
             alert("You Press ME!!!!");
             window.location=window.location.origin;
+            console.log(window.location.origin);
         });
     });
 </script>
